@@ -8,10 +8,10 @@
     <script src="environment.js"></script>
     <script src="basin.js"></script>
     <script src="sketch.js"></script>
-    <link type="text/css" rel="stylesheet" href="../experiments.css" />
+    <link type="text/css" rel="stylesheet" href="style.css" />
   </head>
   <body>
     <a id="version"></a>
-    <script src="../version.js"></script>
+    <script src="version.js"></script>
   </body>
 </html>
